--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <footer>
       <p>
-        <span id="wave">Copyright 2023. cocoder. All Rights Reserved.</span>
+        <span id="wave">Copyright 2023. ~ HongHiru ~ All Rights Reserved.</span>
       </p>
     </footer>
     <canvas></canvas>
